move project to java 13, remove pmd, resolve gradle deprecation warnings